--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ alembic~=1.14.1
 fastapi~=0.115.8
 psycopg2-binary
 python-dotenv~=1.0.1
-sqlalchemy~=2.0.37
+sqlalchemy  # ~=2.0.37
 fastapi-users[sqlalchemy]
 fastapi-users-db-sqlalchemy
 fastapi[all]
