--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,10 @@ pydantic~=2.10.6
 starlette~=0.45.3
 passlib~=1.7.4
 PyJWT~=2.10.1
+pytest
+pytest-asyncio
+coverage
+locust
+httpx
+pytest-mock
+aiosqlite
